nestjs-educativo/output.txt

> nestjs-educativo@1.0.0 test
> vitest run


 RUN  v4.1.9 /home/psych/projects/curso-nestjs/nestjs-educativo

stderr | tests/validation.test.js > API de Validación de Ejercicios > Soluciones Correctas > debería validar exitosamente todas las soluciones correctas del nivel 1
Failed at exercise 6 with errors: temp_scripts/user_1_6_1781695516258.ts(11,37): error TS2591: Cannot find name 'process'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.

Command failed: npx tsc --noEmit --experimentalDecorators /app/temp_scripts/user_1_6_1781695516258.ts && tsx /app/temp_scripts/user_1_6_1781695516258.ts 2>&1


 ❯ tests/validation.test.js (3 tests | 1 failed) 5619ms
       × debería validar exitosamente todas las soluciones correctas del nivel 1 4665ms
       ✓ debería rechazar código con errores de tipado de TypeScript  676ms
       ✓ debería rechazar código con errores de sintaxis 277ms

⎯⎯⎯⎯⎯⎯⎯ Failed Tests 1 ⎯⎯⎯⎯⎯⎯⎯

 FAIL  tests/validation.test.js > API de Validación de Ejercicios > Soluciones Correctas > debería validar exitosamente todas las soluciones correctas del nivel 1
AssertionError: expected false to be true // Object.is equality

- Expected
+ Received

- true
+ false

 ❯ tests/validation.test.js:30:33
     28|           console.error(`Failed at exercise ${ex.id} with errors: ${re…
     29|         }
     30|         expect(result.correcto).toBe(true);
       |                                 ^
     31|       }
     32|     }, 30000); // Timeout extendido porque validar varios scripts toma…

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[1/1]⎯


 Test Files  1 failed (1)
      Tests  1 failed | 2 passed (3)
   Start at  12:25:12
   Duration  5.69s (transform 8ms, setup 0ms, import 14ms, tests 5.62s, environment 0ms)

